--- a/Views/Admin/CourseTraAdmin.cshtml
+++ b/Views/Admin/CourseTraAdmin.cshtml
@@ -88,13 +88,13 @@
                             <td>
                                 <a class="btn btn-warning" asp-controller="Admin"
                                    asp-action="DetailCourseTra"
-                                   asp-route-id="@CourseTra.Codecoursetra">View</a>
+                                   asp-route-id="@CourseTra.Codecoursetra">ดูข้อมูล</a>
                             </td>
 
                             <td>
                                 <a class="btn btn-warning" asp-controller="Admin"
                                    asp-action="FullCourseTra"
-                                   asp-route-id="@CourseTra.Codecoursetra">Full</a>
+                                   asp-route-id="@CourseTra.Codecoursetra">ดูข้อมูล</a>
                             </td>
 
                             @* <td>
