--- a/Views/Admin/DetailCourseCs.cshtml
+++ b/Views/Admin/DetailCourseCs.cshtml
@@ -56,7 +56,9 @@
             <Center><h1 class="w3-xxxlarge">@Model.FirstOrDefault()?.Namecoursecs</h1></Center>
 
         </header>
-
+        <br />
+        <a class="btn btn-group" style="background-color:Green;" asp-controller="Admin" asp-action="AddSubCs"><span style="color:white;">+ เพิ่มรหัสรายวิชา</span></a><br>
+        <br />
         <table id="example" class="display">
 
             <thead>
@@ -93,7 +95,7 @@
                             <center>
                                 <a class="btn btn-warning" asp-controller="Admin"
                                    asp-action="DetailSubCs"
-                                   asp-route-id="@CourseCs.Codecssub">Detail</a>
+                                   asp-route-id="@CourseCs.Codecssub">ดูข้อมูล</a>
                             </center>
                         </td>
 
