--- a/Views/Admin/DetailCourseTra.cshtml
+++ b/Views/Admin/DetailCourseTra.cshtml
@@ -91,7 +91,7 @@
                             <center>
                                 <a class="btn btn-warning" asp-controller="Admin"
                                    asp-action="DetailSubTra"
-                                   asp-route-id="@CourseTra.Codetrasub">Detail</a>
+                                   asp-route-id="@CourseTra.Codetrasub">ดูข้อมูล</a>
                             </center>
                         </td>
 
