--- a/Views/Admin/PairCourse.cshtml
+++ b/Views/Admin/PairCourse.cshtml
@@ -38,7 +38,7 @@
 </head>
 <body>
     <nav class="w3-sidebar w3-bar-block w3-collapse w3-animate-left w3-card" style="z-index:3;width:240px;background:White;" id="mySidebar">
-        <span class="w3-bar-item w3-border-bottom w3-large">Transfer System</span>
+        <span class="w3-bar-item w3-border-bottom w3-large">Admin</span>
         <a class="w3-bar-item w3-button w3-hide-large w3-large" href="javascript:void(0)" onclick="w3_close()">Close <i class="fa fa-remove"></i></a>
 
         <a class="w3-bar-item w3-button w3-pale-red" href="@Url.Action("TransferCourse", "Admin")">ย้อนกลับ</a>
