--- a/Views/Admin/TableData.cshtml
+++ b/Views/Admin/TableData.cshtml
@@ -65,7 +65,7 @@
                     <th>รหัสนักศึกษา</th>
                     <th>ชื่อ</th>
                     <th>นามสกุล</th>
-                    <th>Email</th>
+                    <th>อิเมล</th>
                     <th>ทรานสคริปต์</th>
 
                     <th>เทียบโอนวิชา</th>
