--- a/Views/Admin/TransferCourse.cshtml
+++ b/Views/Admin/TransferCourse.cshtml
@@ -59,21 +59,21 @@
             <center><h1 class="w3-xxxlarge">เทียบโอนหลักสูตร</h1></center>
         </header>
         <br />
-        <a class="btn btn-group" style="background-color:Green;" asp-controller="Admin" asp-action="PairCourse"><span style="color:white;">+ เพิ่มการจับคู่หลักสูตร</span></a> <a class="btn btn-group" style="background-color:Green;" asp-controller="Admin" asp-action="PairSub"><span style="color:white;">+ เพิ่มการจับคู่วิชา</span></a><br>
-        
+        <a class="btn btn-group" style="background-color:Green;" asp-controller="Admin" asp-action="PairCourse"><span style="color:white;">+ เพิ่มการจับคู่หลักสูตร</span></a> 
+        <br>
         
             <br>
             <table id="example" class="display">
                 <thead>
                     <tr>
-                        <th>รหัสเทียบหลักสูตร</th>
+                        @* <th>รหัสเทียบหลักสูตร</th> *@
                         <th>รหัสหลักสูตรวิทย์คอม</th>
                         <th>ชื่อหลักสูตรวิทย์คอม</th>
                         <th>รหัสหลักสูตรปวส.</th>
                         <th>ชื่อหลักสูตรปวส.</th>
 
                         @* <th>แก้ไข</th> *@
-                        <th>รายละเอียดวิชา</th>
+                        <th>รายละเอียด</th>
                         <th>ลบ</th>
                     </tr>
                 </thead>
@@ -82,14 +82,14 @@
                     @foreach (var TraCs in Model)
                     {
                         <tr>
-                            <td>@TraCs.CodeCoursetrans</td>
+                            @* <td>@TraCs.CodeCoursetrans</td> *@
                             <td>@TraCs.CourseCs</td>
                             <td>@TraCs.Namecoursecs</td>
                             <td>@TraCs.CourseTra</td>
                             <td>@TraCs.Namecoursetra</td>
 
                             @* <td><a class="btn btn-warning" asp-controller="Admin" asp-action="EditCourseCsTra" asp-route-id="@TraCs.Id">แก้ไข</a></td> *@
-                        <td><a class="btn btn-warning" asp-controller="Admin" asp-action="TransferSub" asp-route-id="@TraCs.CodeCoursetrans">ดูข้อมูลวิชา</a></td>
+                        <td><a class="btn btn-warning" asp-controller="Admin" asp-action="TransferSub" asp-route-id="@TraCs.CodeCoursetrans">ดูข้อมูล</a></td>
                         <td><a class="btn btn-danger" asp-controller="Admin" asp-action="DeleteCourse" asp-route-id="@TraCs.CodeCoursetrans" onclick="return confirm('คุณต้องการลบหรือไม่')">ลบ</a></td>
                         </tr>
                     }
