--- a/Views/Home/TransResult.cshtml
+++ b/Views/Home/TransResult.cshtml
@@ -1,13 +1,14 @@
-﻿ @model IEnumerable<ProjectFinal1.Models.V_CourseCss>;
+﻿@model IEnumerable<TableTransfer>;
 <!DOCTYPE html>
 <html lang="en">
 @{
-    ViewData["Title"] = "DetailCourseCs";
+    ViewData["Title"] = "TransResult";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 
     <!-- Include jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
@@ -31,76 +32,52 @@
             font-weight: bold;
         }
 
-        tr {
-            padding: 100px;
+        thead {
+            padding: 30px;
         }
     </style>
 
 </head>
-
 <body>
     <nav class="w3-sidebar w3-bar-block w3-collapse w3-animate-left w3-card" style="z-index:3;width:240px;background:white;" id="mySidebar">
-        <span class="w3-bar-item w3-border-bottom w3-large">User</span>
+        <span class="w3-bar-item w3-border-bottom w3-large">Admin</span>
         <a class="w3-bar-item w3-button w3-hide-large w3-large" href="javascript:void(0)" onclick="w3_close()">Close <i class="fa fa-remove"></i></a>
 
-        <a class="w3-bar-item w3-button w3-pale-red" href="@Url.Action("CourseCs","Home")">ย้อนกลับ</a>
-        <a class="w3-bar-item w3-button w3-pale-blue">@Model.FirstOrDefault()?.Namecoursecs</a>
+        <a class="w3-bar-item w3-button" href="@Url.Action("Index","Home")">หน้าแรก</a>
+        <a class="w3-bar-item w3-button" href="@Url.Action("FullCourseCs","Home")">หลักสูตรวิทย์คอม</a>
+        <a class="w3-bar-item w3-button" href="@Url.Action("CourseTra","Home")">หลักสูตรปวส.</a>
+        <a class="w3-bar-item w3-button w3-pale-blue">ผลการเทียบโอน</a>
+        <a class="w3-bar-item w3-button" asp-area="Identity" asp-page="/Account/Image">รูปทรานสคริปต์</a>
     </nav>
 
     <div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" id="myOverlay"></div>
 
     <div class="w3-main" style="margin-left:250px;">
 
-        <header class="w3-container w3-pale-white" style="padding:26px 32px">
-
-            <Center><h1 class="w3-xxxlarge">@Model.FirstOrDefault()?.Namecoursecs</h1></Center>
-
+        <header class="w3-container" style="padding:26px 32px">
+            <center><h1 class="w3-xxxlarge">ผลการเทียบโอน</h1></center>
         </header>
 
-        <table id="example" class="display">
+                <table id="example" class="display">
+                    <thead>
+                        <tr>
+                            <th>ชื่อวิชาcs</th>
+                            <th>ชื่อวิชาปวส.</th>
 
-            <thead>
-                <tr>
-                    <th>รหัสกลุ่มวิชา</th>
-                    <th>ชื่อกลุ่มวิชา</th>
-                    <th>รหัสวิชา</th>
-                    <th>ชื่อวิชาไทย</th>
-                    <th>ชื่อวิชาอังกฤษ</th>
-                    <th>หน่วยกิต</th>
-                    <th>สถานะ</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var DataUser in Model)
+                        {
+                            <tr>
 
+                                <td>@DataUser.CodeSubtran</td>
+                                <td>@DataUser.GradeTra</td>
 
-                    <th>คำอธิบายรายวิชา</th>
-
-
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var CourseCs in Model)
-                {
-                    <tr>
-                        <td>@CourseCs.Namesubgroup</td>
-                        <td>@CourseCs.Namesubtype</td>
-                        <td>@CourseCs.Codesubcs</td>
-                        <td>@CourseCs.Namethaics</td>
-                        <td>@CourseCs.Nameengcs</td>
-                        <td>@CourseCs.Credits</td>
-                        <td>@CourseCs.Status</td>
-
-                        <td>
-                            <center>
-                                <a class="btn btn-warning" asp-controller="Home"
-                                   asp-action="DetailSubCs"
-                                   asp-route-id="@CourseCs.Codecssub">Detail</a>
-                            </center>
-                        </td>
-
-                    </tr>
-                }
-
-                        
-            </tbody>
-        </table>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
     </div>
 
 </body>
@@ -145,5 +122,6 @@
                 x.previousElementSibling.className.replace(" w3-theme", "");
         }
     }
+
 
 </script>
