--- a/Areas/Identity/Pages/Account/Image.cshtml
+++ b/Areas/Identity/Pages/Account/Image.cshtml
@@ -43,9 +43,9 @@
         <a class="w3-bar-item w3-button w3-hide-large w3-large" href="javascript:void(0)" onclick="w3_close()">Close <i class="fa fa-remove"></i></a>
 
         <a class="w3-bar-item w3-button" href="@Url.Action("Index","Home")">หน้าแรก</a>
-        <a class="w3-bar-item w3-button" href="@Url.Action("CourseCs","Home")">หลักสูตรวิทย์คอม</a>
+        <a class="w3-bar-item w3-button" href="@Url.Action("FullCourseCs","Home")">หลักสูตรวิทย์คอม</a>
         <a class="w3-bar-item w3-button" href="@Url.Action("CourseTra","Home")">หลักสูตรปวส.</a>
-        <a class="w3-bar-item w3-button" href="@Url.Action("TransferCourse","Home")">เทียบโอนหลักสูตร</a>
+        <a class="w3-bar-item w3-button" href="@Url.Action("TransResult","Home")">ผลการเทียบโอน</a>
         <a class="w3-bar-item w3-button w3-pale-blue">รูปทรานสคริปต์</a>
     </nav>
 
