--- a/Views/Admin/DetailSubCsTra.cshtml
+++ b/Views/Admin/DetailSubCsTra.cshtml
@@ -43,7 +43,7 @@
 </head>
 <body>
     <nav class="w3-sidebar w3-bar-block w3-collapse w3-animate-left w3-card" style="z-index:3;width:235px;background:white;" id="mySidebar">
-        <span class="w3-bar-item w3-border-bottom w3-large w3-white">User</span>
+        <span class="w3-bar-item w3-border-bottom w3-large w3-white">Admin</span>
         <a class="w3-bar-item w3-button w3-hide-large w3-large" href="javascript:void(0)" onclick="w3_close()">Close <i class="fa fa-remove"></i></a>
 
         <a class="w3-bar-item w3-button w3-pale-red" href="@Url.Action("TransferCourse", "Admin")">ย้อนกลับ</a>
@@ -56,21 +56,22 @@
     <div class="w3-main" style="margin-left:250px;">
 
         <header class="w3-container" style="padding:26px 32px">
-            <textarea rows="1" cols="50" asp-for="Namethaics" class="a"></textarea><textarea rows="1" cols="50" asp-for="Namethaitra" class="a"></textarea>
+            <textarea rows="1" cols="50" asp-for="Namethaics" class="a"></textarea>
         </header>
-        <form id="profile-form" method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
-            <hr />
+
             <div class="row">
                 <p></p>
                 <textarea rows="5" cols="50" asp-for="Subdescs" class="form-control-lg" disabled></textarea>
             </div>
+
+        <header class="w3-container" style="padding:26px 32px">
+            <textarea rows="1" cols="50" asp-for="Namethaitra" class="a"></textarea>
+        </header>
             <div class="row">
                 <p></p>
                 <textarea rows="5" cols="50" asp-for="Subdestra" class="form-control-lg" disabled></textarea>
             </div>
 
-        </form>
     </div>
 
 </body>
