--- a/Views/Admin/PairSub.cshtml
+++ b/Views/Admin/PairSub.cshtml
@@ -38,11 +38,11 @@
 </head>
 <body>
     <nav class="w3-sidebar w3-bar-block w3-collapse w3-animate-left w3-card" style="z-index:3;width:240px;background:White;" id="mySidebar">
-        <span class="w3-bar-item w3-border-bottom w3-large">Transfer System</span>
+        <span class="w3-bar-item w3-border-bottom w3-large">Admin</span>
         <a class="w3-bar-item w3-button w3-hide-large w3-large" href="javascript:void(0)" onclick="w3_close()">Close <i class="fa fa-remove"></i></a>
 
         <a class="w3-bar-item w3-button w3-pale-red" href="@Url.Action("TransferCourse", "Admin")">ย้อนกลับ</a>
-        <a class="w3-bar-item w3-button w3-pale-blue">เพิ่มการจับคู่หลักสูตร</a>
+        <a class="w3-bar-item w3-button w3-pale-blue">เพิ่มการจับคู่วิชา</a>
 
     </nav>
 
@@ -51,7 +51,7 @@
     <div class="w3-main" style="margin-left:250px;">
 
         <header class="w3-container" style="padding:26px 32px">
-            <center><h1 class="w3-xxxlarge">เพิ่มการจับคู่หลักสูตร</h1></center>
+            <center><h1 class="w3-xxxlarge">เพิ่มการจับคู่วิชา</h1></center>
         </header>
 
         <form method="POST" asp-controller="Admin" asp-action="PairSub">
