--- a/Views/Admin/TransferSub.cshtml
+++ b/Views/Admin/TransferSub.cshtml
@@ -51,10 +51,10 @@
     <div class="w3-main" style="margin-left:250px;">
 
         <header class="w3-container" style="padding:26px 32px">
-            <Center><h1>@Model.FirstOrDefault()?.Namecoursecs - @Model.FirstOrDefault()?.Namecoursetra</h1></Center>
+            <Center><h1>การเทียบโอนของ @Model.FirstOrDefault()?.Namecoursecs - @Model.FirstOrDefault()?.Namecoursetra</h1></Center>
         </header>
         <br />
-
+        <a class="btn btn-group" style="background-color:Green;" asp-controller="Admin" asp-action="PairSub"><span style="color:white;">+ เพิ่มการจับคู่วิชา</span></a><br>
         <br>
         <table id="example" class="display">
             <thead>
@@ -71,6 +71,8 @@
                     @* <th>รหัสรายวิชาปวส.</th> *@
                     <th>รหัสวิชาปวส.</th>
                     <th>ชื่อวิชาปวส.</th>
+
+                    <th>รายละเอียด</th>
 
                 </tr>
             </thead>
@@ -98,7 +100,7 @@
                             <center>
                                 <a class="btn btn-warning" asp-controller="Admin"
                                    asp-action="DetailSubCsTra"
-                                   asp-route-id="@TraCs.CodeSubtrans">Detail</a>
+                                   asp-route-id="@TraCs.CodeSubtrans">ดูข้อมูล</a>
                             </center>
                         </td>
 
