--- a/Views/Home/FullCourseTra.cshtml
+++ b/Views/Home/FullCourseTra.cshtml
@@ -1,9 +1,10 @@
-﻿@model V_CourseCss;
+﻿@model IEnumerable<ProjectFinal1.Models.V_CourseTra>;
+<!DOCTYPE html>
+<html lang="en">
 @{
-    ViewData["Title"] = "DetailSubCs";
+    ViewData["Title"] = "FullCourseTra";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -30,48 +31,56 @@
             font-weight: bold;
         }
 
-        thead {
-            padding: 30px;
-        }
-
-        .a {
-            border: white;
-            font-size: xx-large;
+        tr {
+            padding: 100px;
         }
     </style>
 
 </head>
+
 <body>
-    <nav class="w3-sidebar w3-bar-block w3-collapse w3-animate-left w3-card" style="z-index:3;width:235px;background:white;" id="mySidebar">
-        <span class="w3-bar-item w3-border-bottom w3-large w3-white">User</span>
+    <nav class="w3-sidebar w3-bar-block w3-collapse w3-animate-left w3-card" style="z-index:3;width:240px;background:white;" id="mySidebar">
+        <span class="w3-bar-item w3-border-bottom w3-large">User</span>
         <a class="w3-bar-item w3-button w3-hide-large w3-large" href="javascript:void(0)" onclick="w3_close()">Close <i class="fa fa-remove"></i></a>
 
-        <a class="w3-bar-item w3-button w3-pale-red" href="@Url.Action("CourseCs", "Home")">ย้อนกลับ</a>
-        <a class="w3-bar-item w3-button w3-pale-blue">คำอธิบายรายวิชา</a>
-
+        <a class="w3-bar-item w3-button w3-pale-red" href="@Url.Action("CourseTra","Home")">ย้อนกลับ</a>
+        <a class="w3-bar-item w3-button w3-pale-blue">@Model.FirstOrDefault()?.Namecoursetra</a>
     </nav>
 
     <div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" id="myOverlay"></div>
 
     <div class="w3-main" style="margin-left:250px;">
 
-        <header class="w3-container" style="padding:26px 32px">
-            <textarea rows="1" cols="50" asp-for="Namethaics" class="a"></textarea>
-        </header>
-        <form id="profile-form" method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
+        <header class="w3-container w3-pale-white" style="padding:26px 32px">
 
-            <hr />
-            <div class="row">
+            <Center><h1 class="w3-xxxlarge">@Model.FirstOrDefault()?.Namecoursetra</h1></Center>
+
+        </header>
+
+        @foreach (var CourseCs in Model)
+        {
+            <tr>
+                <label style="color:#cc0000; font-size:large;">
+                <td>@CourseCs.Codesubtra</td></label>
                 <p></p>
-                <textarea rows="5" cols="50" asp-for="Subdescs" class="form-control-lg" disabled></textarea>
-            </div>
-                
-        </form>
+                <td>@CourseCs.Namethaitra</td>
+                <td>@CourseCs.Nameengtra</td>
+                <td>@CourseCs.Credittra</td>
+                <p></p>
+                <td>@CourseCs.Subdestra</td>
+                <p></p>
+            </tr>
+        }
+
     </div>
 
 </body>
+</html>
 <script>
+    $(document).ready(function () {
+        $('#example').DataTable();
+    });
+
     // Open and close the sidebar on medium and small screens
     function w3_open() {
         document.getElementById("mySidebar").style.display = "block";
@@ -109,3 +118,4 @@
     }
 
 </script>
+
