--- a/Views/Home/TransResult.cshtml
+++ b/Views/Home/TransResult.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<TableTransfer>;
+﻿@model IEnumerable<V_User_Tranfer_Course>;
 <!DOCTYPE html>
 <html lang="en">
 @{
@@ -71,7 +71,7 @@
                         {
                             <tr>
 
-                                <td>@DataUser.CodeSubtran</td>
+                                <td>@DataUser.CodeSubtrans</td>
                                 <td>@DataUser.GradeTra</td>
 
                             </tr>
