--- a/Views/Admin/TransferCourse.cshtml
+++ b/Views/Admin/TransferCourse.cshtml
@@ -66,7 +66,7 @@
             <table id="example" class="display">
                 <thead>
                     <tr>
-                        @* <th>รหัสเทียบหลักสูตร</th> *@
+                        <th>รหัสเทียบหลักสูตร</th>
                         <th>รหัสหลักสูตรวิทย์คอม</th>
                         <th>ชื่อหลักสูตรวิทย์คอม</th>
                         <th>รหัสหลักสูตรปวส.</th>
@@ -82,7 +82,7 @@
                     @foreach (var TraCs in Model)
                     {
                         <tr>
-                            @* <td>@TraCs.CodeCoursetrans</td> *@
+                            <td>@TraCs.CodeCoursetrans</td> 
                             <td>@TraCs.CourseCs</td>
                             <td>@TraCs.Namecoursecs</td>
                             <td>@TraCs.CourseTra</td>
