--- a/Views/Admin/TableData.cshtml
+++ b/Views/Admin/TableData.cshtml
@@ -35,6 +35,17 @@
         thead {
             padding: 30px;
         }
+
+        .zoom {
+            transition: transform .2s;
+            width: 320px; /*300px*/
+            height: 320px; /*300px*/
+            margin: 0 auto;
+        }
+
+            .zoom:hover {
+                transform: scale(5.5);
+            }
     </style>
 
 </head>
@@ -81,7 +92,13 @@
                         <td>@DataUser.FirstName</td>
                         <td>@DataUser.LastName</td>
                         <td>@DataUser.Email</td>
-                        <td>@DataUser.Status</td>
+                        <td>
+                            @if (DataUser.FileContent != null && DataUser.FileContent.Length > 0)
+                            {
+                                <img class="zoom" src="data:@DataUser.FileName;base64,@Convert.ToBase64String(DataUser.FileContent)" style="width:100px;height:100px;" ALIGN="middle" />
+
+                            }
+                        </td>
 
                         <td>
                             <center>
